Create SortedList<T> class to provide optimised handling of sorted date/time lists for recurrence calculations
svn path=/trunk/KDE/kdepimlibs/; revision=591089

--- a/kcal/tests/CMakeLists.txt
+++ b/kcal/tests/CMakeLists.txt
@@ -12,6 +12,21 @@ include_directories(
 ########### next target ###############
 
 if(KDE4_BUILD_TESTS)
+set(testsortablelist_SRCS testsortablelist.cpp )
+
+kde4_automoc(${testsortablelist_SRCS})
+
+kde4_add_executable(testsortablelist RUN_UNINSTALLED ${testsortablelist_SRCS})
+
+target_link_libraries(testsortablelist  ${KDE4_KDECORE_LIBS} kcal ${QT_QTTEST_LIBRARY})
+
+add_test(kcal-testsortablelist ${EXECUTABLE_OUTPUT_PATH}/testsortablelist)
+
+endif(KDE4_BUILD_TESTS)
+
+########### next target ###############
+
+if(KDE4_BUILD_TESTS)
 set(loadcalendar_SRCS loadcalendar.cpp )
 
 kde4_automoc(${loadcalendar_SRCS})
