Necessary to change KDE4_AUTOMOC macro to support enable-final argument
(there was not a dependancy between <name>_final.cpp file and
moc generated files => moc files were never created)

Not necessary to rebuild all kdelibs just cp kdelibs/cmake/modules/KDE4Macros.cmake <path_kde4>/share/apps/cmake/modules

I ported and tested all kde module (without enable-final argument, it compiles fines (test and program))
Don't try to use enable-final argument for the moment it doesn't compile (but dependancy works)

Regards

svn path=/trunk/KDE/kdepimlibs/; revision=595038

--- a/kcal/tests/CMakeLists.txt
+++ b/kcal/tests/CMakeLists.txt
@@ -13,7 +13,7 @@ include_directories(
 if(KDE4_BUILD_TESTS)
 set(loadcalendar_SRCS loadcalendar.cpp )
 
-kde4_automoc(${loadcalendar_SRCS})
+kde4_automoc(loadcalendar ${loadcalendar_SRCS})
 
 
 kde4_add_executable(loadcalendar ${loadcalendar_SRCS})
@@ -27,7 +27,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testtostring_SRCS testtostring.cpp )
 
-kde4_automoc(${testtostring_SRCS})
+kde4_automoc(testtostring ${testtostring_SRCS})
 
 
 kde4_add_executable(testtostring ${testtostring_SRCS})
@@ -40,7 +40,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(incidencestest_SRCS incidencestest.cpp )
 
-kde4_automoc(${incidencestest_SRCS})
+kde4_automoc(incidencestest ${incidencestest_SRCS})
 
 
 kde4_add_executable(incidencestest ${incidencestest_SRCS})
@@ -53,7 +53,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(readandwrite_SRCS readandwrite.cpp )
 
-kde4_automoc(${readandwrite_SRCS})
+kde4_automoc(readandwrite ${readandwrite_SRCS})
 
 
 kde4_add_executable(readandwrite ${readandwrite_SRCS})
@@ -66,7 +66,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testresource_SRCS testresource.cpp )
 
-kde4_automoc(${testresource_SRCS})
+kde4_automoc(testresource ${testresource_SRCS})
 
 
 kde4_add_executable(testresource ${testresource_SRCS})
@@ -80,7 +80,7 @@ if(KDE4_BUILD_TESTS)
 set(testfields_SRCS testfields.cpp )
 set_source_files_properties( ${testfields_SRCS} PROPERTIES 
 	COMPILE_FLAGS -DINPUT='"$(srcdir)/data/test_pilot.ics"' )
-kde4_automoc(${testfields_SRCS})
+kde4_automoc(testfields ${testfields_SRCS})
 
 
 kde4_add_executable(testfields ${testfields_SRCS})
@@ -93,7 +93,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testrecurrence_SRCS testrecurrence.cpp )
 
-kde4_automoc(${testrecurrence_SRCS})
+kde4_automoc(testrecurrence ${testrecurrence_SRCS})
 
 
 kde4_add_executable(testrecurrence RUN_UNINSTALLED ${testrecurrence_SRCS})
@@ -106,7 +106,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testrecurprevious_SRCS testrecurprevious.cpp )
 
-kde4_automoc(${testrecurprevious_SRCS})
+kde4_automoc(testrecurprevious ${testrecurprevious_SRCS})
 
 
 kde4_add_executable(testrecurprevious RUN_UNINSTALLED ${testrecurprevious_SRCS})
@@ -119,7 +119,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testrecurson_SRCS testrecurson.cpp )
 
-kde4_automoc(${testrecurson_SRCS})
+kde4_automoc(testrecurson ${testrecurson_SRCS})
 
 
 kde4_add_executable(testrecurson RUN_UNINSTALLED ${testrecurson_SRCS})
@@ -132,7 +132,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testrecurrencetype_SRCS testrecurrencetype.cpp )
 
-kde4_automoc(${testrecurrencetype_SRCS})
+kde4_automoc(testrecurrencetype ${testrecurrencetype_SRCS})
 
 
 kde4_add_executable(testrecurrencetype RUN_UNINSTALLED ${testrecurrencetype_SRCS})
@@ -145,7 +145,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testicaltimezones_SRCS testicaltimezones.cpp )
 
-kde4_automoc(${testicaltimezones_SRCS})
+kde4_automoc(testicaltimezones ${testicaltimezones_SRCS})
 
 
 kde4_add_executable(testicaltimezones RUN_UNINSTALLED ${testicaltimezones_SRCS})
@@ -160,7 +160,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testalarm_SRCS testalarm.cpp )
 
-kde4_automoc(${testalarm_SRCS})
+kde4_automoc(testalarm ${testalarm_SRCS})
 
 kde4_add_executable(testalarm NOGUI RUN_UNINSTALLED ${testalarm_SRCS})
 
@@ -174,7 +174,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testattachment_SRCS testattachment.cpp )
 
-kde4_automoc(${testattachment_SRCS})
+kde4_automoc(testattachment ${testattachment_SRCS})
 
 kde4_add_executable(testattachment NOGUI RUN_UNINSTALLED ${testattachment_SRCS})
 
@@ -188,7 +188,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testattendee_SRCS testattendee.cpp )
 
-kde4_automoc(${testattendee_SRCS})
+kde4_automoc(testattendee ${testattendee_SRCS})
 
 kde4_add_executable(testattendee NOGUI RUN_UNINSTALLED ${testattendee_SRCS})
 
@@ -202,7 +202,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testcalendarlocal_SRCS testcalendarlocal.cpp )
 
-kde4_automoc(${testcalendarlocal_SRCS})
+kde4_automoc(testcalendarlocal ${testcalendarlocal_SRCS})
 
 kde4_add_executable(testcalendarlocal NOGUI RUN_UNINSTALLED ${testcalendarlocal_SRCS})
 
@@ -216,7 +216,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testcalendarnull_SRCS testcalendarnull.cpp )
 
-kde4_automoc(${testcalendarnull_SRCS})
+kde4_automoc(testcalendarnull ${testcalendarnull_SRCS})
 
 kde4_add_executable(testcalendarnull NOGUI RUN_UNINSTALLED ${testcalendarnull_SRCS})
 
@@ -230,7 +230,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testduration_SRCS testduration.cpp )
 
-kde4_automoc(${testduration_SRCS})
+kde4_automoc(testduration ${testduration_SRCS})
 
 kde4_add_executable(testduration NOGUI RUN_UNINSTALLED ${testduration_SRCS})
 
@@ -244,7 +244,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testevent_SRCS testevent.cpp )
 
-kde4_automoc(${testevent_SRCS})
+kde4_automoc(testevent ${testevent_SRCS})
 
 kde4_add_executable(testevent NOGUI RUN_UNINSTALLED ${testevent_SRCS})
 
@@ -258,7 +258,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testperson_SRCS testperson.cpp )
 
-kde4_automoc(${testperson_SRCS})
+kde4_automoc(testperson ${testperson_SRCS})
 
 kde4_add_executable(testperson NOGUI RUN_UNINSTALLED ${testperson_SRCS})
 
@@ -272,7 +272,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testperiod_SRCS testperiod.cpp )
 
-kde4_automoc(${testperiod_SRCS})
+kde4_automoc(testperiod ${testperiod_SRCS})
 
 kde4_add_executable(testperiod NOGUI RUN_UNINSTALLED ${testperiod_SRCS})
 
@@ -287,7 +287,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testsortablelist_SRCS testsortablelist.cpp )
 
-kde4_automoc(${testsortablelist_SRCS})
+kde4_automoc(testsortablelist ${testsortablelist_SRCS})
 
 kde4_add_executable(testsortablelist NOGUI RUN_UNINSTALLED ${testsortablelist_SRCS})
 
@@ -301,7 +301,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testtodo_SRCS testtodo.cpp )
 
-kde4_automoc(${testtodo_SRCS})
+kde4_automoc(testtodo ${testtodo_SRCS})
 
 kde4_add_executable(testtodo NOGUI RUN_UNINSTALLED ${testtodo_SRCS})
 
@@ -315,7 +315,7 @@ endif(KDE4_BUILD_TESTS)
 if(KDE4_BUILD_TESTS)
 set(testvcalexport_SRCS testvcalexport.cpp )
 
-kde4_automoc(${testvcalexport_SRCS})
+kde4_automoc(testvcalexport ${testvcalexport_SRCS})
 
 kde4_add_executable(testvcalexport RUN_UNINSTALLED ${testvcalexport_SRCS})
 
