--- a/kldap/tests/CMakeLists.txt
+++ b/kldap/tests/CMakeLists.txt
@@ -10,7 +10,7 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/.. ${KDE4_KIO_INCLUDES} )
 
 set(testkldap_SRCS testkldap.cpp )
 
-kde4_automoc(${testkldap_SRCS})
+kde4_automoc(testkldap ${testkldap_SRCS})
 
 kde4_add_executable(testkldap RUN_UNINSTALLED ${testkldap_SRCS})
 
