--- a/kresources/CMakeLists.txt
+++ b/kresources/CMakeLists.txt
@@ -21,7 +21,7 @@ set(kresources_LIB_SRCS
    idmapper.cpp
    )
 
-kde4_automoc(${kresources_LIB_SRCS})
+kde4_automoc(kresources ${kresources_LIB_SRCS})
 
 kde4_add_library(kresources SHARED ${kresources_LIB_SRCS})
 
@@ -35,7 +35,7 @@ install(TARGETS kresources  DESTINATION ${LIB_INSTALL_DIR} )
 
 set(kcm_kresources_PART_SRCS kcmkresources.cpp )
 
-kde4_automoc(${kcm_kresources_PART_SRCS})
+kde4_automoc(kcm_kresources ${kcm_kresources_PART_SRCS})
 
 kde4_add_plugin(kcm_kresources ${kcm_kresources_PART_SRCS})
 
