Necessary to modify KDE4_ADD_KCFG_FILES to support ENABLE_FINAL (there was not a dependancy between <name>_final.cpp file and kcfg file => kfg files were never created)
Not necessary to rebuild all kdelibs just cp kdelibs/cmake/modules/KDE4Macros.cmake <path_kde4>/share/apps/cmake/modules

I ported all kde module (without enable-final argument, it compiles fines (test and program))
Don't try to use enable-final argument for the moment it doesn't compile (but dependancy works)
(I didn't test all compile for the moment I will fix all compile today (without enable-final argument)
kdelibs/kdepimlibs/kdebase/kdeutils compiles fine)


Regards

svn path=/trunk/KDE/kdepimlibs/; revision=595169

--- a/kcal/CMakeLists.txt
+++ b/kcal/CMakeLists.txt
@@ -247,7 +247,7 @@ set(kcal_LIB_SRCS ${libversit_SRCS} ${libical_SRCS} ${libicalss_SRCS}
 
 kde4_automoc(kcal ${kcal_LIB_SRCS})
 
-kde4_add_kcfg_files(kcal_LIB_SRCS htmlexportsettings.kcfgc )
+kde4_add_kcfg_files(kcal kcal_LIB_SRCS htmlexportsettings.kcfgc )
 
 kde4_add_library(kcal SHARED ${kcal_LIB_SRCS})
 
