Necessary to change KDE4_AUTOMOC macro to support enable-final argument
(there was not a dependancy between <name>_final.cpp file and
moc generated files => moc files were never created)

Not necessary to rebuild all kdelibs just cp kdelibs/cmake/modules/KDE4Macros.cmake <path_kde4>/share/apps/cmake/modules

I ported and tested all kde module (without enable-final argument, it compiles fines (test and program))
Don't try to use enable-final argument for the moment it doesn't compile (but dependancy works)

Regards

svn path=/trunk/KDE/kdepim/kioslave/; revision=595182

--- a/kpimidentities/CMakeLists.txt
+++ b/kpimidentities/CMakeLists.txt
@@ -6,7 +6,7 @@ include_directories( ${CMAKE_SOURCE_DIR}/libkleo  )
 
 set(kpimidentities_LIB_SRCS identitymanager.cpp identity.cpp identitycombo.cpp)
 
-kde4_automoc(${kpimidentities_LIB_SRCS})
+kde4_automoc(kpimidentities ${kpimidentities_LIB_SRCS})
 
 qt4_add_dbus_adaptor(kpimidentities_LIB_SRCS org.kde.pim.IdentityManager.xml identitymanager.h KPIM::IdentityManager )
 qt4_add_dbus_interfaces(kpimidentities_LIB_SRCS org.kde.pim.IdentityManager.xml)
