Apply Alex patch (now we can use enable-final argument some module compiles with enable-final now) As discussed with Alex it's not necessary to have program name into automoc macro
svn path=/trunk/KDE/kdepimlibs/; revision=598289

--- a/emailfunctions/CMakeLists.txt
+++ b/emailfunctions/CMakeLists.txt
@@ -6,7 +6,7 @@ add_subdirectory( tests )
 set(emailfunctions_LIB_SRCS
    email.cpp)
 
-kde4_automoc(emailfunctions ${emailfunctions_LIB_SRCS})
+kde4_automoc(${emailfunctions_LIB_SRCS})
 
 kde4_add_library(emailfunctions SHARED ${emailfunctions_LIB_SRCS})
 
