--- a/syndication/CMakeLists.txt
+++ b/syndication/CMakeLists.txt
@@ -111,7 +111,7 @@ set(syndication_LIB_SRCS
    specificdocument.cpp 
    abstractparser.cpp)
 
-kde4_automoc(syndication ${syndication_LIB_SRCS})
+kde4_automoc(${syndication_LIB_SRCS})
 
 kde4_add_library(syndication SHARED ${syndication_LIB_SRCS})
 
