--- a/syndication/tests/CMakeLists.txt
+++ b/syndication/tests/CMakeLists.txt
@@ -8,7 +8,7 @@ include_directories( ${CMAKE_SOURCE_DIR}/syndication/   )
 
 set(testlibsyndication_SRCS testlibsyndication.cpp )
 
-kde4_automoc(testlibsyndication ${testlibsyndication_SRCS})
+kde4_automoc(${testlibsyndication_SRCS})
 
 kde4_add_executable(testlibsyndication ${testlibsyndication_SRCS})
 
@@ -18,7 +18,7 @@ target_link_libraries(testlibsyndication  syndication ${KDE4_KDECORE_LIBS} )
 
 set(testloader_SRCS testloader.cpp )
 
-kde4_automoc(testloader ${testloader_SRCS})
+kde4_automoc(${testloader_SRCS})
 
 kde4_add_executable(testloader ${testloader_SRCS})
 
@@ -28,7 +28,7 @@ target_link_libraries(testloader  syndication ${KDE4_KDECORE_LIBS} )
 
 set(testpersonimpl_SRCS testpersonimpl.cpp )
 
-kde4_automoc(testpersonimpl ${testpersonimpl_SRCS})
+kde4_automoc(${testpersonimpl_SRCS})
 
 kde4_add_executable(testpersonimpl RUN_UNINSTALLED ${testpersonimpl_SRCS})
 
