Apply Alex patch (now we can use enable-final argument some module compiles with enable-final now) As discussed with Alex it's not necessary to have program name into automoc macro
svn path=/trunk/KDE/kdepim/kioslave/; revision=598343

--- a/gpgme++/CMakeLists.txt
+++ b/gpgme++/CMakeLists.txt
@@ -25,7 +25,7 @@ set(gpgme_LIB_SRCS
 )
 
 
-kde4_automoc(gpgme ${gpgme_LIB_SRCS})
+kde4_automoc(${gpgme_LIB_SRCS})
 
 kde4_add_library(gpgme++ SHARED ${gpgme_LIB_SRCS})
 
