use cmake for iterating over test feeds, makes tests work without using testfeeds.rb
svn path=/trunk/KDE/kdepimlibs/; revision=599691

--- a/syndication/tests/CMakeLists.txt
+++ b/syndication/tests/CMakeLists.txt
@@ -36,6 +36,22 @@ target_link_libraries(testpersonimpl  syndication ${KDE4_KDECORE_LIBS} ${QT_QTTE
 
 add_test(libsyndication-testpersonimpl ${EXECUTABLE_OUPUT_PATH}/testpersonimpl)
 
+########### next target ###############
+
+FILE( GLOB_RECURSE atomFiles atom/*xml )
+FILE( GLOB_RECURSE rdfFiles rdf/*xml )
+FILE( GLOB_RECURSE rss2Files rss2/*xml )
+
+FOREACH( file ${atomFiles} )
+  ADD_TEST( Atom-${file} ${EXECUTABLE_OUTPUT_PATH}/testlibsyndication ${file} --compare ${file}.expected )
+ENDFOREACH(file)
+FOREACH( file ${rdfFiles} )
+  ADD_TEST( Rdf-${file} ${EXECUTABLE_OUTPUT_PATH}/testlibsyndication ${file} --compare ${file}.expected )
+ENDFOREACH(file)
+FOREACH( file ${rss2Files} )
+  ADD_TEST( Rss2-${file} ${EXECUTABLE_OUTPUT_PATH}/testlibsyndication ${file} --compare ${file}.expected )
+ENDFOREACH(file)
+
 ########### install files ###############
 
 endif(KDE4_BUILD_TESTS)
