install more include files needed by the kdepim apps
svn path=/trunk/KDE/kdepimlibs/; revision=601101

--- a/libkmime/CMakeLists.txt
+++ b/libkmime/CMakeLists.txt
@@ -38,12 +38,16 @@ install(TARGETS kmime  DESTINATION ${LIB_INSTALL_DIR})
 install( FILES
         boolflags.h
         kmime.h
+        kmime_charfreq.h
+        kmime_codecs.h
         kmime_content.h
         kmime_contentindex.h
         kmime_header_parsing.h
         kmime_headers.h
         kmime_headers_obs.h
         kmime_message.h
+        kmime_mdn.h
+        kmime_newsarticle.h
         kmime_util.h
 DESTINATION ${INCLUDE_INSTALL_DIR}/kmime)
 
