--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ add_subdirectory(kcal)
 add_subdirectory(ktnef)
 endif(NOT MSVC)
 add_subdirectory(kldap)
-add_subdirectory(libkmime)
+add_subdirectory(kmime)
 add_subdirectory(kresources)
 add_subdirectory(kabc)
 add_subdirectory(syndication)
