kmime -> ${KDE4_MIME_LIBS}
svn path=/trunk/KDE/kdepim/kioslave/; revision=602444

--- a/kioslave/imap4/CMakeLists.txt
+++ b/kioslave/imap4/CMakeLists.txt
@@ -21,7 +21,7 @@ kde4_automoc(${kio_imap4_PART_SRCS})
 
 kde4_add_plugin(kio_imap4 ${kio_imap4_PART_SRCS})
 
-target_link_libraries(kio_imap4  ${KDE4_KDE3SUPPORT_LIBS}  ${SASL2_LIBRARIES} kmime  )
+target_link_libraries(kio_imap4  ${KDE4_KDE3SUPPORT_LIBS}  ${SASL2_LIBRARIES} ${KDE4_KMIME_LIBS})
 
 install(TARGETS kio_imap4  DESTINATION ${PLUGIN_INSTALL_DIR})
 
