Fix typo that prevented the tests from being run successfully
svn path=/trunk/KDE/kdepimlibs/; revision=608810

--- a/kcal/tests/CMakeLists.txt
+++ b/kcal/tests/CMakeLists.txt
@@ -292,7 +292,7 @@ ENDFOREACH(file)
 
 FOREACH( file ${vCalFilesAsIcal} )
   GET_FILENAME_COMPONENT( fn ${file} NAME)
-  ADD_TEST( VCalOut-${fn} ${CMAKE_CURRENT_SOURCE_DIR}/runsingletestcase.pl ${EXECUTABLE_OUTPUT_PATH}/textvcalexport "vcal" ${file} )
+  ADD_TEST( VCalOut-${fn} ${CMAKE_CURRENT_SOURCE_DIR}/runsingletestcase.pl ${EXECUTABLE_OUTPUT_PATH}/testvcalexport "vcal" ${file} )
 ENDFOREACH(file)
 
 FOREACH( file ${vCalFiles} )
