Make koffice compile
svn path=/trunk/KDE/kdepimlibs/; revision=608835

--- a/kldap/CMakeLists.txt
+++ b/kldap/CMakeLists.txt
@@ -19,7 +19,7 @@ set(klap_EXTRA_INCLUDES ${LDAP_INCLUDE_DIR})
 endif (LDAP_FOUND)
 
 if (SASL2_FOUND)
-set(kldap_EXTRA_LIBS ${kldap_EXTRA_LIBS} ${SASL2_LIBRARIES})
+set(kldap_EXTRA_LIBS ${kldap_EXTRA_LIBS} ${SASL2_LIBRARIES} ${KDE4_KDECORE_LIBS})
 set(kldap_EXTRA_INCLUDES ${kldap_EXTRA_INCLUDES} ${SASL2_INCLUDE_DIR})
 endif (SASL2_FOUND)
 
