don't build if no ldap is there
svn path=/trunk/KDE/kdepimlibs/; revision=609670

--- a/kldap/tests/CMakeLists.txt
+++ b/kldap/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-if(KDE4_BUILD_TESTS)
+if(KDE4_BUILD_TESTS AND LDAP_FOUND)
 
 # Tests don't need to go into toplevel/bin, they are fine in the current dir.
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR} )
