Fix the definition of PACKAGE_DATA_DIR so the ical timezones can be found. testicaltimezones no longer prints  ERROR: ICalTimeZoneSource: failed to get libical TZID prefix
CCMAIL: software@astrojar.org.uk

svn path=/trunk/KDE/kdepimlibs/; revision=610280

--- a/kcal/CMakeLists.txt
+++ b/kcal/CMakeLists.txt
@@ -2,7 +2,7 @@ project(kcal)
 
 configure_file(config-kcal.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config-kcal.h )
 
-ADD_DEFINITIONS(-DPACKAGE_DATA_DIR=\\""${CMAKE_INSTALL_PREFIX}${DATA_INSTALL_DIR}/libical"\\" ) # added manually
+ADD_DEFINITIONS(-DPACKAGE_DATA_DIR=\\""${DATA_INSTALL_DIR}/libical"\\" ) # added manually
 
 include_directories(
 	${CMAKE_SOURCE_DIR}/kcal/libical/src/libicalss/
