Install dbus interface Remove not necessary files Clean up CMakeLists.txt
svn path=/trunk/KDE/kdepim/libkpimidentities/; revision=616663

--- a/kpimidentities/CMakeLists.txt
+++ b/kpimidentities/CMakeLists.txt
@@ -18,26 +18,4 @@ target_link_libraries(kpimidentities  ${KDE4_KDEUI_LIBS} kleopatra kdepim )
 set_target_properties(kpimidentities PROPERTIES VERSION 1.0.0 SOVERSION 1 )
 install(TARGETS kpimidentities  DESTINATION ${LIB_INSTALL_DIR})
 
-
-
-
-
-#original Makefile.am contents follow:
-
-#INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/libkleo $(all_includes)
-#KDE_CXXFLAGS = -UQT3_SUPPORT
-#
-#lib_LTLIBRARIES = libkpimidentities.la
-#libkpimidentities_la_SOURCES = \
-#    identitymanager.cpp identity.cpp identitymanager.skel \
-#    identitycombo.cpp
-#libkpimidentities_la_LIBADD = ../libkleo/libkleopatra.la \
-#    ../libkdepim/libkdepim.la ../libemailfunctions/libemailfunctions.la
-#libkpimidentities_la_LDFLAGS = $(all_libraries) -no-undefined \
-#    -version-info 1:0:0
-#
-#METASOURCES = AUTO
-#
-#include $(top_srcdir)/admin/Doxyfile.am
-#
-## No messages target. Those files are part of libkdepim.pot.
+install(FILES org.kde.pim.IdentityManager.xml DESTINATION ${DBUS_INTERFACES_DIR})
