Add mail transport jobs for sendmail and SMTP. The sendmail job actually works, the SMTP job is still incomplete.
svn path=/trunk/KDE/kdepim/mailtransport/; revision=619047

--- a/mailtransport/CMakeLists.txt
+++ b/mailtransport/CMakeLists.txt
@@ -6,9 +6,12 @@ set(mailtransport_lib_srcs
   transport.cpp
   transportcombobox.cpp
   transportconfigdialog.cpp
+  transportjob.cpp
   transportmanager.cpp
   transportmanagementwidget.cpp
   transporttypedialog.cpp
+  sendmailjob.cpp
+  smtpjob.cpp
 )
 
 kde4_automoc(${mailtransport_lib_srcs})
